# Lab_work_19

./: 1  CMakeLists.txt  main.c
algorithms/: algorithms.c
matrix/: matrix.c  matrix.h
matrix/algorithms/: algorithms.c  algorithms.h
string/: string.c  string.h
tasks/: convert_float_num.h  evaluate_expression.h  get_best_team.h  leave_longest_word .h  main  matrix_transposition.h  rearrange_numbers.h  remove_polynomial.h  special_word.h  transpose_non_symmetric_matrix.h  update_product.h
tasks_20_lab/: auto_completion.h  bin_tree.h  filter_num.h  find_median.h  game_life.h  generate_num.h  get_domains.h  get_submatrix.h  matrix_transformation.h  rearrange_string.h
tasks_tests/: task_10_test_01.txt  task_10_test_02.txt  task_10_test_31.txt  task_10_test_51.txt  task_1_test_0.txt  task_2_test_0.txt  task_2_test_2.txt  task_3_test_0.txt  task_3_test_1.txt  task_3_test_2.txt  task_4_test_0.txt  task_4_test_3.txt  task_5_test_0.txt  task_5_test_2.txt  task_5_test_3.txt  task_6_test_0.txt  task_6_test_2.txt  task_7_test_0.txt  task_8_test_0.txt  task_9_test_0.txt  task_9_test_2.txt  task_9_test_3.txt
tasks_tests_20_lab/: task_4_test.txt  task_8_test.txt  tests.h
vector/: vector.c  vector.h  vector_void.c  vector_void.h
